# mbg-ngraket

./: .dockerignore  .env.example  .env.production.example  .gitignore  ABSENSI_PAYROLL.md  ANALISIS_CODEBASE.md  API_DOCUMENTATION.md  ARSITEKTUR_BARU.md  AUDIT_REPORT.md  BENCHMARK_PERFORMA.md  BGN_JUKNIS_MATRIX.md  CLAUDE.md  CLEANUP_MANIFEST.md  Cargo.toml  DEPLOY_ALTERNATIVES.md  DEPLOY_ORACLE_FREE.md  DOKUMENTASI_TEKNIS.md  GITHUB_SETUP.md  PROJECT_TECH_OVERVIEW.md  PUSH-KE-GITHUB.bat  README.md  SECURITY_SEO_CHECKLIST.md  START_HERE.md  TESTING.md  UX_DESIGN.md  deploy-lite.sh  deploy.sh  deployment.md  docker-compose.lite.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  plan.md  push-to-github.ps1  push-to-github.sh
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 01_init.sql  02_auth.sql  03_tenants_comprehensive.sql  04_subscription.sql  05_scheduler_metrics.sql  06_roles_and_audit.sql  07_recipe_steps.sql  08_nutrisurvey.sql  09_nutrisurvey_history.sql  10_foods.sql  11_food_management.sql  12_kitchen_resources.sql  13_staff_shifts_init.sql  13_v7_master_data.sql  14_tasks.sql  15_finance_description.sql  16_attendance_payroll.sql  17_platform_auth.sql  18_billing_system.sql  19_billing_bigint.sql  20_procurement.sql  21_inventory_upgrade.sql  22_fundamental_fixes.sql  23_finance_foundation.sql  24_staff_portal_login.sql  25_ingredients_estimated_price.sql  26_schema_fixes.sql  27_staff_face_recognition.sql  28_v7_planner.sql  29_plan_materials_price_unit.sql
backend/src/: main.rs  state.rs
backend/templates/: base.html  batches.html  billing.html  dashboard.html  finance.html  finance_expense_new.html  forgot_password.html  home.html  index.html  inventory.html  inventory_ingredient_new.html  login.html  plans.html  (+10 more)
(+286 files in other folders)
