[workspace]
members = [
    "backend",
    "scheduler",
    "shared",
    "src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["MBG Cloud Kitchen"]

[workspace.dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
time = { version = "0.3", features = ["macros", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "time", "macros"] }
thiserror = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "set-header"] }
dotenvy = "0.15"
anyhow = "1.0"
